--- a/docs/2.utils/1.request.md
+++ b/docs/2.utils/1.request.md
@@ -33,7 +33,7 @@ Get a request header by name.
 
 ```ts
 export default defineEventHandler((event) => {
-  const contentType = getRequestHeader(event, "content-type"); // "application/json"
+  const contentType = getHeader(event, "content-type"); // "application/json"
 });
 ```
 
@@ -47,7 +47,7 @@ Array headers are joined with a comma.
 
 ```ts
 export default defineEventHandler((event) => {
-  const headers = getRequestHeaders(event); // { "content-type": "application/json", "x-custom-header": "value" }
+  const headers = getHeaders(event); // { "content-type": "application/json", "x-custom-header": "value" }
 });
 ```
 
