docs: tiny typo

--- a/docs/1.guide/1.index.md
+++ b/docs/1.guide/1.index.md
@@ -8,7 +8,7 @@ icon: ph:book-open-duotone
 
 ## Overview
 
-h3 (short for HTTP, pronounced as /eɪtʃθriː/, like h-3) is a lightweight, ultra fast and [composable](/utils) server framework for JavaScript based on Web standards working on any JavaScript runtime.
+h3 (short for HTTP, pronounced as /eɪtʃθriː/, like h-3) is a lightweight, ultra-fast and [composable](/utils) server framework for JavaScript based on Web standards working on any JavaScript runtime.
 
 > [!IMPORTANT]
 > You are reading h3 version 2 (release candidate) docs.
@@ -76,7 +76,7 @@ app.get("/", () => {
 ```
 
 ::tip
-Router is powered by [🌳 rou3](https://github.com/h3js/rou3), an ultra fast and tiny route matcher engine.
+Router is powered by [🌳 rou3](https://github.com/h3js/rou3), an ultra-fast and tiny route matcher engine.
 ::
 
 In h3 event handlers, all you have to do to make a response, is to simply return it! Responses can be simple **string**, **JSON object**, **binary data**, **stream**, **error**, ... or standard [Web Response](https://developer.mozilla.org/en-US/docs/Web/API/Response/Response).
