--- a/docs/1.guide/5.routing.md
+++ b/docs/1.guide/5.routing.md
@@ -7,7 +7,7 @@ icon: solar:route-linear
 H3 app instance has a built in router system to register routes matching patterns with parameter or specific HTTP method.
 
 ::tip
-Router is powered by [🌳 rou3](https://github.com/h3js/rou3), an ultra fast and tiny route matcher engine.
+Router is powered by [🌳 rou3](https://github.com/h3js/rou3), an ultra-fast and tiny route matcher engine.
 ::
 
 **Example:** Register a route to match requests to the `/hello` endpoint with HTTP **GET** method:
