--- a/docs/1.guide/2.app.md
+++ b/docs/1.guide/2.app.md
@@ -87,7 +87,7 @@ Register route handler for all HTTP methods.
 
 Register a global middleware handler.
 
-### `app.use(route, handler, opts?)`
+### `app.use(middleware, opts?: { method?: string, route?: string })`
 
 Register a routed global middleware handler.
 
