--- a/docs/1.guide/3.handler.md
+++ b/docs/1.guide/3.handler.md
@@ -253,7 +253,11 @@ app.use(
   (event, next) => {
     console.log("[alert] POST request on /blog paths!");
   },
-  { method: "POST", route: "/blog/**" },
+  {
+    method: "POST",
+    route: "/blog/**",
+    // match: (event) => event.req.method === "POST", // Same as method: "POST"
+  },
 );
 ```
 
