--- a/docs/1.guide/5.routing.md
+++ b/docs/1.guide/5.routing.md
@@ -124,3 +124,18 @@ app.use(async (event, next) => {
   return rawResponse;
 });
 ```
+
+You can also register middleware that match certain requires:
+
+```js
+app.use(
+  (event, next) => {
+    console.log("[alert] POST request on /blog paths!");
+  },
+  {
+    method: "POST",
+    route: "/blog/**",
+    // match: (event) => event.req.method === "POST", // Same as method: "POST"
+  },
+);
+```
