--- a/docs/1.guide/2.app.md
+++ b/docs/1.guide/2.app.md
@@ -87,9 +87,9 @@ Register route handler for all HTTP methods.
 
 Register a global middleware handler.
 
-### `app.use(middleware, opts?: { method?: string, route?: string })`
+### `app.use(middleware, opts?)`
 
-Register a routed global middleware handler.
+Register a routed global middleware handler with optional custom matching options.
 
 ## H3 App Properties
 
