--- a/docs/1.guide/6.websocket.md
+++ b/docs/1.guide/6.websocket.md
@@ -8,6 +8,9 @@ icon: cib:socket-io
 
 You can add cross platform WebSocket support to H3 servers using [🔌 CrossWS](https://crossws.h3.dev/).
 
+> [!IMPORTANT]
+> Built-in support of WebSockets in h3 version is WIP.
+
 ## Usage
 
 WebSocket handlers can be defined using the `defineWebSocketHandler()` utility and registered to any route like event handlers.
