--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -8,29 +8,29 @@ authors:
 
 # H3 v2-beta - Try now!
 
-> H3 v2-beta is finally ready to try, coming with a full rewrite based on Web standards, backward compatibility and perf boost!
+> H3 v2-beta is finally ready to try, coming with a full rewrite based on Web standards, backward compatibility, and a big perf boost!
 
-H3 was born ~5 years ago in 2020, during evolution of edge Workers. Since earlier versions of H3, using [unjs/unenv](https://github.com/unjs/unenv) and [Nitro](https://nitro.build), allowed to run H3 apps directly in worker runtimes and since [v1.8](/blog/v1.8), H3 increased Web standard compatibility support.
+H3 was born ~5 years ago in late 2020, during the rise of edge Workers. Since earlier versions of H3, using [unjs/unenv](https://github.com/unjs/unenv) and [Nitro](https://nitro.build), allowed H3 apps to run directly in worker runtimes and since [v1.8](/blog/v1.8), H3 increased Web standard compatibility support.
 
-H3 v1 remained based on Node.js APIs with compatibility layer for Web standards. This was the logical choice because even today, Node.js is mostly used runtime for JavaScript servers.
+H3 v1 remained based on Node.js APIs with a compatibility layer for Web standards. This was the logical choice because even today, Node.js is mostly used runtime for JavaScript servers.
 
-Thanks to the evolution of modern Web standards, and wider support in runtimes such as [Deno](https://deno.com/), [Bun](https://bun.sh/), also latest [Node.js](https://nodejs.org/en), i feel confident that ecosystem is finally ready to best on the Web platform standards for Servers. This has several benefits:
+Thanks to the evolution of modern Web standards, and wider support in runtimes such as [Deno](https://deno.com/), [Bun](https://bun.sh/), also the latest [Node.js](https://nodejs.org/en), i feel confident that ecosystem is finally ready to best on the Web platform standards for Servers. This has several benefits:
 
 - ✅ Cross-Runtime interoperability (Node.js, Deno, Bun, Workers, etc)
-- ✅ Cross-Framwwork compatibility (Hono, Elysia, etc)
-- ✅ Cross-Environment compatibility (Closer code used in Frontned and Backend)
+- ✅ Cross-FrameWork compatibility (Hono, Elysia, etc)
+- ✅ Cross-Environment compatibility (Closer code used in Frontend and Backend)
 - ✅ Easier to test server APIs
 
-The first big challenge, as you can imagine was that Node.js does not natively supports creating HTTP servers with Web Platform APIs. It means an "adapter" is needed to convert [`node.http.IncomingMessage`](https://nodejs.org/api/http.html#class-httpincomingmessage) to web [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) and handle [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) via [`node.http.SeeverResponse`](https://nodejs.org/api/http.html#class-httpserverresponse). There are several existing attempts for this compatibility layer, but during evaluation, neither of them was fitting exactly what needed for H3 in terms of modularity, performance and compatibility.
+The first big challenge, as you can imagine, was that Node.js does not natively support creating HTTP servers with Web Platform APIs. It means an "adapter" is needed to convert [`node.http.IncomingMessage`](https://nodejs.org/api/http.html#class-httpincomingmessage) to web [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) and handle [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) via [`node.http.SeeverResponse`](https://nodejs.org/api/http.html#class-httpserverresponse). There are several existing attempts for this compatibility layer, but during evaluation, none of them fit exactly what was needed for H3 in terms of modularity, performance, and compatibility.
 
-Furthormore, each runtime that pioneered in adopting Web platform standards for servers, did not exactly agreed on same specifics.
-Commonly, all new server runtimes inspire from a [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like with [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) as input and a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) as returned value. However since web platform standards were not initially designed to be used as Server API in mind, accessing request context and IP, WebSocket upgrades, setting server options, etc are completely different ([WinterTC](https://wintertc.org/faq) mission is to increase cross-runtime interoperability hopefully over the time).
+Furthormore, each runtime that pioneered in adopting Web platform standards for servers did not agreed on the same specifics.
+Commonly, all new server runtimes accept [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like handler with [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) as input and a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) as returned value. However, since web platform standards were not initially designed to be used in the Servers context, they lack standards for accessing request context and IP. WebSocket upgrades, setting server options, etc. So each runtime made their own addons (Today, [WinterTC](https://wintertc.org/faq)'s mission is to increase cross-runtime interoperability, hopefully over time).
 
 ## Srvx: Universal Server API
 
 We have built a robust and open abstraction layer "[srvx](https://srvx.h3.dev)" during development of H3 version 2.
 
-Srvx project has only job to do one thing well ([Unix Philosophy](http://www.catb.org/esr/writings/taoup/html/ch01s06.html)): Unify Javascript Server APIs.
+Srvx project has one primary job to do well ([Unix Philosophy](http://www.catb.org/esr/writings/taoup/html/ch01s06.html)): Unify Javascript Server APIs.
 
 ```js
 // Works with Deno, Bun, Node.js, Service Workers and Edge
@@ -44,11 +44,11 @@ serve({
 });
 ```
 
-With srvx as the new building block layer handling all necessary runtime-specific API mappings, H3 can be significiantly simpler and focus on only Web platform APIs, yet supporting any runtime of your choice with best performance ([benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)) and compatibility.
+With srvx as the new building block layer handling all necessary runtime-specific API mappings, H3 can be significantly simpler and focus on only Web platform APIs, yet supporting any runtime of your choice with best performance ([benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)) and compatibility. We will likely backport more custom runtime (and provider) adapters to the srvx layer in the future.
 
 ## H3: Tiny Server Composer 🎶
 
-With the full adoption of Web Platform APIs and srvx already handling cross runtime differences, I wanted to make sure H3 scope remains as simple as possible. In fact, making it Simple, was the [most complex](https://www.antonsten.com/articles/simple-is-hard/) part and took months until finding the right balance between minimal and usability with conventions.
+With the full adoption of Web Platform APIs and srvx already handling cross runtime differences, I wanted to make sure the H3 scope remains as simple as possible. In fact, making it Simple was the [most complex](https://www.antonsten.com/articles/simple-is-hard/) part and took months until finding the right balance between minimal and usability with conventions.
 
 ```js
 import { H3, serve } from "h3";
@@ -58,19 +58,19 @@ const app = new H3().get("/", () => "⚡️ Tadaa!");
 serve(app, { port: 3000 });
 ```
 
-With H3 you have:
+With H3, you have:
 
 - ✅ A web server based on unified Web platform standards (handling low-level performance optimizations).
 - ✅ Easy responses and error handling by directly returning or throwing whatever you want.
 - ✅ Routing support with a tiny and fast router ([rou3](https://github.com/h3js/rou3)).
-- ✅ Middleware to intercept requests, responses and errors.
+- ✅ Middleware to intercept requests, responses, and errors.
 - ✅ Tiny core and composable utilities.
 
 ## Web-Compatible Event Context
 
-H3 version 2, is not only built on top of Web Platform APIs, but also trying to strongly embrace them and avoiding any additional convention when possible.
+H3 version 2 is not only built on top of Web Platform APIs, but also trying to strongly embrace them and avoiding any additional convention when possible.
 
-With each HTTP request, an `H3Event` context is passed to handlers and middleware which you can access.
+With each HTTP request, an `H3Event` context is passed to handlers and middleware, which you can access.
 
 ```js
 app.any("/**", (event) => {
@@ -100,7 +100,7 @@ app.any("/**", (event) => {
 
 ## Chainable Middleware
 
-On of the frequently requested features, was an ergonimic way to intercept request lifecycle. While h3 supports global hooks such as `onRequest`, `onBeforeResponse` and `onError`, they are not composable enough.
+One of the frequently requested features was an ergonomic way to intercept the request lifecycle. While h3 supports global hooks such as `onRequest`, `onBeforeResponse`, and `onError`, they are not composable enough.
 
 Following up good experiences from [srvx middleware](https://srvx.h3.dev/guide/middleware) and inspired by [Hono middleware](https://hono.dev/docs/guides/middleware) ❤️, H3 recently introduced a new chainable middleware API.
 
@@ -129,7 +129,7 @@ app.use("/", async (event, next) => {
 
 ## Bare-Metal Performances
 
-One classic approach to qualify web frameworks is by comparing RPS (Requests handled Per Second). This method to measure RPS, often can be misleading to read and also contains external factors such as OS networking layer and runtime specific behavior and does not take into account about other factors like bundle size and initialization time that matter.
+One classic approach to qualify web frameworks is by comparing RPS (Requests Per Second). This method to measure RPS, often can be misleading to read and also contains external factors such as OS networking layer and runtime specific behavior, and does not take into account about other factors like bundle size and initialization time that matter.
 
 We have approached benchmarking with a new system that primarily focused on measuring how much overhead framework itself adds and try to minimize all factors closer to zero, as if you have not added or used H3.
 
@@ -137,24 +137,24 @@ We have approached benchmarking with a new system that primarily focused on meas
 - App initialization time (important for short-lived servers)
 - App bundle size (without runtime adapters)
 
-Thanks to the clarity of this new method, H3 latency could be optimized with precition of µs per request (10<sup>-6</sup> of a second!) and bundle size down to bytes, leading to h3 v2 being significiantly better than previous versions.
+Thanks to the clarity of this new method, H3 latency could be optimized with precision of µs per request (10<sup>-6</sup> of a second!) and bundle size down to bytes, leading to h3 v2 being significiantly better than previous versions.
 
 > [!NOTE]
-> It is worth to note that, at this level, any web-compatible framework you choose (or even if you combine multiple of them!) barely affects final performances in your applications (network latency is usually measured in scale of milliseconds). This kind of benchmarks are purely for internal low-level optimizations.
+> It is worth noting that, at this level, any web-compatible framework you choose (or even if you combine multiple of them!) barely affects final performances in your applications (network latency is usually measured in scale of milliseconds). These kinds of benchmarks are purely for internal low-level optimizations.
 
 [TODO: results comparing with v1]
 
 ## Migration from Version 1
 
-Even though h3 version 2 is an almost full rewrite, we tried to reduce impact of breaking changes minimal.
+Even though h3 version 2 is an almost full rewrite, we tried to reduce the impact of breaking changes minimal.
 
 Check out [Migration Guide](/migration) for API changes.
 
 ## An Ecosystem of Unified H(ttp) Server Tools
 
-H3 and related projects recently migrated from [UnJS](https://github.com/unjs), which served as incubator, into a new [Github org](https://github.com/h3js) and a new domain [h3.dev](https://h3.dev).
+H3 and related projects recently migrated from [UnJS](https://github.com/unjs), which served as an incubator, into a new [Github org](https://github.com/h3js) and a new domain [h3.dev](https://h3.dev).
 
-Under the umbrella of H3, we are hosting several key components for universal JavaScript servers, all compltely open to be used with or without h3 and with any JavaScript runtime.
+Under the umbrella of H3, we are hosting several key components for universal JavaScript servers, all completely open to be used with or without H3 and with any JavaScript runtime.
 
 - [⚡️ h3](https://github.com/h3js/h3): Minimal H(TTP) framework.
 - [🌳 rou3](https://github.com/h3js/rou3): Lightweight and fast rou(ter) for JavaScript.
