--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -14,23 +14,23 @@ H3 was born ~5 years ago in late 2020, during the rise of edge Workers. Since ea
 
 H3 v1 remained based on Node.js APIs with a compatibility layer for Web standards. This was the logical choice because even today, Node.js is mostly used runtime for JavaScript servers.
 
-Thanks to the evolution of modern Web standards, and wider support in runtimes such as [Deno](https://deno.com/), [Bun](https://bun.sh/), also the latest [Node.js](https://nodejs.org/en), i feel confident that ecosystem is finally ready to best on the Web platform standards for Servers. This has several benefits:
+Thanks to the evolution of Web standards, and wider support in runtimes such as [Deno](https://deno.com/), [Bun](https://bun.sh/), also the latest [Node.js](https://nodejs.org/en), i feel confident that ecosystem is finally ready to best on the Web standards for Servers. This has several benefits:
 
 - ✅ Cross-Runtime interoperability (Node.js, Deno, Bun, Workers, etc)
 - ✅ Cross-FrameWork compatibility (Hono, Elysia, etc)
 - ✅ Cross-Environment compatibility (Closer code used in Frontend and Backend)
 - ✅ Easier to test server APIs
 
-The first big challenge, as you can imagine, was that Node.js does not natively support creating HTTP servers with Web Platform APIs. It means an "adapter" is needed to convert [`node.http.IncomingMessage`](https://nodejs.org/api/http.html#class-httpincomingmessage) to web [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) and handle [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) via [`node.http.SeeverResponse`](https://nodejs.org/api/http.html#class-httpserverresponse). There are several existing attempts for this compatibility layer, but during evaluation, none of them fit exactly what was needed for H3 in terms of modularity, performance, and compatibility.
-
-Furthormore, each runtime that pioneered in adopting Web platform standards for servers did not agreed on the same specifics.
-Commonly, all new server runtimes accept [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like handler with [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) as input and a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) as returned value. However, since web platform standards were not initially designed to be used in the Servers context, they lack standards for accessing request context and IP. WebSocket upgrades, setting server options, etc. So each runtime made their own addons (Today, [WinterTC](https://wintertc.org/faq)'s mission is to increase cross-runtime interoperability, hopefully over time).
-
 ## Srvx: Universal Server API
+
+The first challenge for adopting Web standards, was that Node.js does not natively support creating HTTP servers with Web Platform APIs. It means an "adapter" is needed to convert [`node.http.IncomingMessage`](https://nodejs.org/api/http.html#class-httpincomingmessage) to web [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) and handle [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) via [`node.http.SeeverResponse`](https://nodejs.org/api/http.html#class-httpserverresponse). There are several existing attempts for this compatibility layer, but during evaluation, none of them fit exactly what was needed for H3 in terms of modularity, performance, and compatibility.
+
+Furthormore, each runtime that pioneered in adopting Web standards for servers did not agreed on the same specifics.
+Commonly, all new server runtimes accept [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like handler with [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) as input and a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) as returned value. However, since Web standards were not initially designed to be used in the Servers context, they lack standards for accessing request context and IP. WebSocket upgrades, setting server options, etc. So each runtime made their own addons (Today, [WinterTC](https://wintertc.org/faq)'s mission is to increase cross-runtime interoperability, hopefully over time).
 
 We have built a robust and open abstraction layer "[srvx](https://srvx.h3.dev)" during development of H3 version 2.
 
-Srvx project has one primary job to do well ([Unix Philosophy](http://www.catb.org/esr/writings/taoup/html/ch01s06.html)): Unify Javascript Server APIs.
+Srvx project has one primary job to do well ([Unix Philosophy](http://www.catb.org/esr/writings/taoup/html/ch01s06.html)): **Unify Javascript Server APIs**.
 
 ```js
 // Works with Deno, Bun, Node.js, Service Workers and Edge
@@ -39,12 +39,17 @@ import { serve } from "srvx";
 serve({
   port: 3000,
   fetch(request) {
+    // request.ip
+    // request.runtime?.{bun,deno,node,cloudflare,...}
     return new Response("👋 Hello there!");
   },
 });
 ```
 
-With srvx as the new building block layer handling all necessary runtime-specific API mappings, H3 can be significantly simpler and focus on only Web platform APIs, yet supporting any runtime of your choice with best performance ([benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)) and compatibility. We will likely backport more custom runtime (and provider) adapters to the srvx layer in the future.
+> [!NOTE]
+> One distinct choice in srvx, is that all runtime specific addons are added under the `request.runtime?` instead of needing to carry one or more extra context objects.
+
+With srvx as the new building block layer handling all necessary runtime-specific API mappings, H3 can be significantly simpler and focus on only Web platform APIs, yet supporting any runtime of your choice with best performance ([benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)) and compatibility assured with same tests passing in all supported adapters. We will likely backport more custom runtime and provider adapters to the srvx layer in the future.
 
 ## H3: Tiny Server Composer 🎶
 
@@ -60,7 +65,7 @@ serve(app, { port: 3000 });
 
 With H3, you have:
 
-- ✅ A web server based on unified Web platform standards (handling low-level performance optimizations).
+- ✅ A web server based on unified Web standards (handling low-level performance optimizations).
 - ✅ Easy responses and error handling by directly returning or throwing whatever you want.
 - ✅ Routing support with a tiny and fast router ([rou3](https://github.com/h3js/rou3)).
 - ✅ Middleware to intercept requests, responses, and errors.
@@ -100,9 +105,9 @@ app.any("/**", (event) => {
 
 ## Chainable Middleware
 
-One of the frequently requested features was an ergonomic way to intercept the request lifecycle. While h3 supports global hooks such as `onRequest`, `onBeforeResponse`, and `onError`, they are not composable enough.
+One of the frequently requested features was an ergonomic way to intercept the request lifecycle. While H3 supports global hooks such as `onRequest`, `onBeforeResponse`, and `onError`, they are not composable enough.
 
-Following up good experiences from [srvx middleware](https://srvx.h3.dev/guide/middleware) and inspired by [Hono middleware](https://hono.dev/docs/guides/middleware) ❤️, H3 recently introduced a new chainable middleware API.
+Following up good experiences from [srvx middleware](https://srvx.h3.dev/guide/middleware) and inspired by [Hono middleware](https://hono.dev/docs/guides/middleware) 💛, H3 recently introduced a new chainable middleware API.
 
 ```js
 import { H3, serve } from "h3";
@@ -137,7 +142,7 @@ We have approached benchmarking with a new system that primarily focused on meas
 - App initialization time (important for short-lived servers)
 - App bundle size (without runtime adapters)
 
-Thanks to the clarity of this new method, H3 latency could be optimized with precision of µs per request (10<sup>-6</sup> of a second!) and bundle size down to bytes, leading to h3 v2 being significiantly better than previous versions.
+Thanks to the clarity of this new method, H3 latency could be optimized with precision of µs per request (10<sup>-6</sup> of a second!) and bundle size down to bytes, leading to H3 v2 being significiantly better than previous versions.
 
 > [!NOTE]
 > It is worth noting that, at this level, any web-compatible framework you choose (or even if you combine multiple of them!) barely affects final performances in your applications (network latency is usually measured in scale of milliseconds). These kinds of benchmarks are purely for internal low-level optimizations.
@@ -146,23 +151,25 @@ Thanks to the clarity of this new method, H3 latency could be optimized with pre
 
 ## Migration from Version 1
 
-Even though h3 version 2 is an almost full rewrite, we tried to reduce the impact of breaking changes minimal.
+Even though H3 version 2 is an almost full rewrite, we tried to reduce the impact of breaking changes.
 
+::read-more{to="/migration"}
 Check out [Migration Guide](/migration) for API changes.
+::
 
-## An Ecosystem of Unified H(ttp) Server Tools
+## Unified H(ttp) Server Tools
 
-H3 and related projects recently migrated from [UnJS](https://github.com/unjs), which served as an incubator, into a new [Github org](https://github.com/h3js) and a new domain [h3.dev](https://h3.dev).
+H3 and related projects recently migrated from [UnJS](https://github.com/unjs), which served as an incubator, into a new [Github org](https://github.com/h3js), team and domain [h3.dev](https://h3.dev).
 
-Under the umbrella of H3, we are hosting several key components for universal JavaScript servers, all completely open to be used with or without H3 and with any JavaScript runtime.
+Under the umbrella of H3, we are maintaining several key components for universal JavaScript servers, all completely open to be used with or without H3 and with any JavaScript runtime.
 
 - [⚡️ h3](https://github.com/h3js/h3): Minimal H(TTP) framework.
 - [🌳 rou3](https://github.com/h3js/rou3): Lightweight and fast rou(ter) for JavaScript.
-- [💥 srvx](https://srvx.h3.dev): Universal Server API based on web platform standards.
+- [💥 srvx](https://srvx.h3.dev): Universal Server API based on Web standards.
 - [🔌 srvx](https://crossws.h3.dev): Cross-platform WebSocket server.
 
-## Roadmap to v2.0.0
+## Roadmap to v2 stable
 
-We will be trying to improve documentation, update examples, gather more feedback, testing H3 version 2 for possible bugs and do last minute cleanups with slight API changes and make sure compatibility is good enough is for wider ecosystem adoption by beta testing against [Nitro](https://nitro.build) v3.
+We will be trying to improve documentation, update examples, gather more feedback, testing H3 version 2 for possible bugs and do last minute cleanups with possible slight API changes and make sure compatibility is good enough for wider ecosystem adoption by beta testing against [Nitro](https://nitro.build) v3.
 
 You can join our new [Discord](https://discord.h3.dev) server to chat, and can't wait to hear how is your experience with H3 version 2!
