--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -6,34 +6,31 @@ authors:
     github: pi0
 ---
 
-# H3 v2-beta - Try now!
+# H3 v2-beta - Try it now!
 
-> H3 v2-beta is finally ready to try, coming with a full rewrite based on Web standards, backward compatibility, and a big perf boost!
+> H3 v2-beta is finally ready to try, featuring a complete rewrite based on Web standards, backward compatibility, and a significant performance boost!
 
-H3 was born ~5 years ago in late 2020, during the rise of edge Workers. Since earlier versions of H3, using [unjs/unenv](https://github.com/unjs/unenv) and [Nitro](https://nitro.build), allowed H3 apps to run directly in worker runtimes and since [v1.8](/blog/v1.8), H3 increased Web standard compatibility support.
+H3 was born around five years ago in late 2020, during the rise of edge Workers. Early H3 versions, using [unjs/unenv](https://github.com/unjs/unenv) and [Nitro](https://nitro.build), allowed H3 apps to run directly in worker runtimes. Since [v1.8](/blog/v1.8), H3 has enhanced its Web standards compatibility.
 
-H3 v1 remained based on Node.js APIs with a compatibility layer for Web standards. This was the logical choice because even today, Node.js is mostly used runtime for JavaScript servers.
+H3 v1 was primarily based on Node.js APIs with a compatibility layer for Web standards. Logical choice at the time, given Node.js's popularity amongst JavaScript server runtimes.
 
-Thanks to the evolution of Web standards, and wider support in runtimes such as [Deno](https://deno.com/), [Bun](https://bun.sh/), also the latest [Node.js](https://nodejs.org/en), i feel confident that ecosystem is finally ready to best on the Web standards for Servers. This has several benefits:
+Thanks to evolving Web standards and improved runtime support (such as [Deno](https://deno.com/), [Bun](https://bun.sh/), and the latest [Node.js](https://nodejs.org/en)), the ecosystem is now ready to fully embrace Web standards for server development. Benefits include:
 
-- ✅ Cross-Runtime interoperability (Node.js, Deno, Bun, Workers, etc)
-- ✅ Cross-FrameWork compatibility (Hono, Elysia, etc)
-- ✅ Cross-Environment compatibility (Closer code used in Frontend and Backend)
-- ✅ Easier to test server APIs
+- ✅ Cross-runtime interoperability (Node.js, Deno, Bun, Workers, etc.)
+- ✅ Cross-framework compatibility (Hono, Elysia, etc.)
+- ✅ Cross-environment compatibility (shared frontend and backend code)
+- ✅ Easier server API testing
 
 ## Srvx: Universal Server API
 
-The first challenge for adopting Web standards, was that Node.js does not natively support creating HTTP servers with Web Platform APIs. It means an "adapter" is needed to convert [`node.http.IncomingMessage`](https://nodejs.org/api/http.html#class-httpincomingmessage) to web [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) and handle [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) via [`node.http.SeeverResponse`](https://nodejs.org/api/http.html#class-httpserverresponse). There are several existing attempts for this compatibility layer, but during evaluation, none of them fit exactly what was needed for H3 in terms of modularity, performance, and compatibility.
+A big challenge is Node.js lacks native support for Web-standard HTTP servers. We need adapters to bridge `node.http.IncomingMessage` and `Request`, and handling `Response` via `node.http.ServerResponse`. Existing adapters didn't fully meet H3's requirements for modularity, performance, and compatibility.
 
-Furthormore, each runtime that pioneered in adopting Web standards for servers did not agreed on the same specifics.
-Commonly, all new server runtimes accept [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like handler with [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) as input and a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) as returned value. However, since Web standards were not initially designed to be used in the Servers context, they lack standards for accessing request context and IP. WebSocket upgrades, setting server options, etc. So each runtime made their own addons (Today, [WinterTC](https://wintertc.org/faq)'s mission is to increase cross-runtime interoperability, hopefully over time).
+Furthermore, each runtime that pioneered adopting Web standards for servers did not agree on specific implementation details. Typically, all new server runtimes accept a [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like handler, using [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) as input and returning a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response). However, since Web standards were not initially designed for server contexts, they lack standardized ways to access request context, IP information, handle WebSocket upgrades, or set server options. Consequently, each runtime created its own extensions. Today, initiatives like [WinterTC](https://wintertc.org/faq) aim to establish cross-runtime interoperability over time.
 
-We have built a robust and open abstraction layer "[srvx](https://srvx.h3.dev)" during development of H3 version 2.
-
-Srvx project has one primary job to do well ([Unix Philosophy](http://www.catb.org/esr/writings/taoup/html/ch01s06.html)): **Unify Javascript Server APIs**.
+We created [💥 srvx](https://srvx.h3.dev) out of H3 development branch: An open, robust abstraction layer aiming to unify JavaScript server APIs:
 
 ```js
-// Works with Deno, Bun, Node.js, Service Workers and Edge
+// Compatible with Deno, Bun, Node.js, Service Workers, and Edge
 import { serve } from "srvx";
 
 serve({
@@ -47,13 +44,19 @@ serve({
 ```
 
 > [!NOTE]
-> One distinct choice in srvx, is that all runtime specific addons are added under the `request.runtime?` instead of needing to carry one or more extra context objects.
+> Srvx encapsulates runtime-specific addons under `request.runtime?`, avoiding extra context objects to be passed around.
 
-With srvx as the new building block layer handling all necessary runtime-specific API mappings, H3 can be significantly simpler and focus on only Web platform APIs, yet supporting any runtime of your choice with best performance ([benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)) and compatibility assured with same tests passing in all supported adapters. We will likely backport more custom runtime and provider adapters to the srvx layer in the future.
+With srvx handling runtime-specific API mappings, H3 can remain simpler, focusing exclusively on Web APIs while ensuring cross-runtime performance and compatibility from srvx.
 
 ## H3: Tiny Server Composer 🎶
 
-With the full adoption of Web Platform APIs and srvx already handling cross runtime differences, I wanted to make sure the H3 scope remains as simple as possible. In fact, making it Simple was the [most complex](https://www.antonsten.com/articles/simple-is-hard/) part and took months until finding the right balance between minimal and usability with conventions.
+Adopting Web APIs and leveraging [💥 srvx](https://srvx.h3.dev) simplified H3’s scope significantly.
+
+- ✅ A Web-standard server optimized for performance.
+- ✅ Simple responses and error handling (return or throw directly).
+- ✅ Fast routing via the tiny router ([🌳 rou3](https://github.com/h3js/rou3)).
+- ✅ Middleware for request, response, and error interception.
+- ✅ Tiny core and composable utilities.
 
 ```js
 import { H3, serve } from "h3";
@@ -63,113 +66,89 @@ const app = new H3().get("/", () => "⚡️ Tadaa!");
 serve(app, { port: 3000 });
 ```
 
-With H3, you have:
-
-- ✅ A web server based on unified Web standards (handling low-level performance optimizations).
-- ✅ Easy responses and error handling by directly returning or throwing whatever you want.
-- ✅ Routing support with a tiny and fast router ([rou3](https://github.com/h3js/rou3)).
-- ✅ Middleware to intercept requests, responses, and errors.
-- ✅ Tiny core and composable utilities.
-
 ## Web-Compatible Event Context
 
-H3 version 2 is not only built on top of Web Platform APIs, but also trying to strongly embrace them and avoiding any additional convention when possible.
-
-With each HTTP request, an `H3Event` context is passed to handlers and middleware, which you can access.
+H3 v2 fully embraces Web Platform APIs, minimizing additional conventions in context API.
 
 ```js
-app.any("/**", (event) => {
-    // Access to parsed request URL
-  // 🚀 Faster than new URL(req.url)
-  const { pathname } = event.url;
-
-  // Access to incoming Request
+app.any("/**", async (event) => {
+  const { pathname } = event.url; // Fast URL parsing
   const accept = event.req.headers.get("Accept");
 
-  // Access to request body
   const bodyStream = await event.req.body;
   const bodyText = await event.req.text();
   const bodyJSON = await event.req.json();
-  const bodyFormData = await event.req.fromData();
+  const bodyFormData = await event.req.formData();
 
-  // Access to runtime specific context
   const { deno, bun, node } = event.req.runtime;
 
-  // Set response headers
   event.res.headers.set("Content-Type", "application/json");
 
-  // Send Web standard response
   return Response.json({ hello: "web" });
 });
 ```
 
 ## Chainable Middleware
 
-One of the frequently requested features was an ergonomic way to intercept the request lifecycle. While H3 supports global hooks such as `onRequest`, `onBeforeResponse`, and `onError`, they are not composable enough.
-
-Following up good experiences from [srvx middleware](https://srvx.h3.dev/guide/middleware) and inspired by [Hono middleware](https://hono.dev/docs/guides/middleware) 💛, H3 recently introduced a new chainable middleware API.
+H3 now offers an ergonomic, composable way to chain middleware inspired by [Hono middleware](https://hono.dev/docs/guides/middleware) 💛:
 
 ```js
-import { H3, serve } from "h3";
-
-const app = new H3();
-
 app.use("/", async (event, next) => {
-  // Intercept incoming requests
   console.log(`[${event.req.method}] ${event.req.url}`);
-
-  // Wait for final response
   const rawResponse = await next();
-
-  // Append headers
-  event.res.headers.push("x-middleware", "works");
-
-  // Let H3 handle the response
+  event.res.headers.append("x-middleware", "works");
   return rawResponse;
 });
 ```
 
 > [!NOTE]
-> Using `next()` function is optional. You can omit it from handler params and keep using middleware like v1 without returning a value.
+> Using `next()` is optional. Middleware can be written like v1 without returning a response.
 
-## Bare-Metal Performances
+## Bare-Metal Performance
 
-One classic approach to qualify web frameworks is by comparing RPS (Requests Per Second). This method to measure RPS, often can be misleading to read and also contains external factors such as OS networking layer and runtime specific behavior, and does not take into account about other factors like bundle size and initialization time that matter.
+One classic way to evaluate web frameworks is by comparing RPS (Requests Per Second). However, this metric can be misleading, as it is influenced by external factors such as the OS networking layer and runtime-specific behavior. It also overlooks other important aspects like bundle size and initialization time.
 
-We have approached benchmarking with a new system that primarily focused on measuring how much overhead framework itself adds and try to minimize all factors closer to zero, as if you have not added or used H3.
+We approached benchmarking with a new system that focuses on measuring the overhead introduced by the framework itself. Our goal is to optimize all relevant measurements together, making it as close as possible to a baseline where H3 is not added or used.
 
-- Response generation latency (`app.fetch(request)`)
-- App initialization time (important for short-lived servers)
-- App bundle size (without runtime adapters)
+- Response latency (`app.fetch(request)`)
+- App initialization speed
+- Bundle size
 
-Thanks to the clarity of this new method, H3 latency could be optimized with precision of µs per request (10<sup>-6</sup> of a second!) and bundle size down to bytes, leading to H3 v2 being significiantly better than previous versions.
+This method, allowed H3 v2 to be optimized on µs-level latency improvements per request and dramatically smaller core bundle size.
 
 > [!NOTE]
-> It is worth noting that, at this level, any web-compatible framework you choose (or even if you combine multiple of them!) barely affects final performances in your applications (network latency is usually measured in scale of milliseconds). These kinds of benchmarks are purely for internal low-level optimizations.
+> Framework choice barely impacts application performance compared to network latency. These benchmarks primarily guide internal optimizations.
 
-[TODO: results comparing with v1]
+<!-- [TODO: Benchmark results vs v1] -->
 
 ## Migration from Version 1
 
-Even though H3 version 2 is an almost full rewrite, we tried to reduce the impact of breaking changes.
+We've minimized breaking changes.
 
 ::read-more{to="/migration"}
-Check out [Migration Guide](/migration) for API changes.
+Check out new v2 [Migration Guide](/migration).
 ::
 
 ## Unified H(ttp) Server Tools
 
-H3 and related projects recently migrated from [UnJS](https://github.com/unjs), which served as an incubator, into a new [Github org](https://github.com/h3js), team and domain [h3.dev](https://h3.dev).
+H3 and related projects moved to a dedicated [Github org](https://github.com/h3js) and [h3.dev](https://h3.dev) domain.
 
-Under the umbrella of H3, we are maintaining several key components for universal JavaScript servers, all completely open to be used with or without H3 and with any JavaScript runtime.
+Under the H3 umbrella, we maintain several key components for universal JavaScript servers. All fully open and usable with or without H3, and with any JavaScript runtime.
 
-- [⚡️ h3](https://github.com/h3js/h3): Minimal H(TTP) framework.
-- [🌳 rou3](https://github.com/h3js/rou3): Lightweight and fast rou(ter) for JavaScript.
-- [💥 srvx](https://srvx.h3.dev): Universal Server API based on Web standards.
-- [🔌 srvx](https://crossws.h3.dev): Cross-platform WebSocket server.
+- [⚡️ h3](https://github.com/h3js/h3): Minimal HTTP framework.
+- [🌳 rou3](https://github.com/h3js/rou3): Lightweight JavaScript router.
+- [💥 srvx](https://srvx.h3.dev): Universal Web-based Server API.
+- [🔌 crossws](https://crossws.h3.dev): Cross-platform WebSocket server.
 
-## Roadmap to v2 stable
+## Roadmap to v2 Stable
 
-We will be trying to improve documentation, update examples, gather more feedback, testing H3 version 2 for possible bugs and do last minute cleanups with possible slight API changes and make sure compatibility is good enough for wider ecosystem adoption by beta testing against [Nitro](https://nitro.build) v3.
+Next steps:
 
-You can join our new [Discord](https://discord.h3.dev) server to chat, and can't wait to hear how is your experience with H3 version 2!
+- Improve documentation and update examples.
+- Gather feedback and more testing.
+- Refine APIs based on community feedback.
+- Ensure ecosystem compatibility and adopt with [Nitro](https://nitro.build) v3.
+
+::callout{to="https://discord.h3.dev"}
+Join our [Discord](https://discord.h3.dev) to share your experience and feedback!
+::
