--- a/docs/1.guide/3.handler.md
+++ b/docs/1.guide/3.handler.md
@@ -29,16 +29,18 @@ The callback function can be sync or async:
 defineEventHandler(async (event) => "Response");
 ```
 
-### Object Syntax
-
-You can use an object syntax in `defineEventHandler` for more flexible options.
+You can optionally register some [middleware](#middleware) to run with event handler to intercept request, response or errors.
 
 ```js
-defineEventHandler({
-  onRequest: [],
-  onBeforeResponse: []
-  handler: () => "Response",
-})
+defineEventHandler(
+  async (event) => "Response",
+  [
+    auth(),
+    (event) => {
+      console.log("intercepting event");
+    },
+  ],
+);
 ```
 
 ## Responses Types
