--- a/docs/1.guide/3.handler.md
+++ b/docs/1.guide/3.handler.md
@@ -32,15 +32,7 @@ defineEventHandler(async (event) => "Response");
 You can optionally register some [middleware](#middleware) to run with event handler to intercept request, response or errors.
 
 ```js
-defineEventHandler(
-  async (event) => "Response",
-  [
-    auth(),
-    (event) => {
-      console.log("intercepting event");
-    },
-  ],
-);
+defineEventHandler((event) => {}, [auth]);
 ```
 
 ## Responses Types
