--- a/docs/1.guide/5.routing.md
+++ b/docs/1.guide/5.routing.md
@@ -143,11 +143,5 @@ app.use(
 When adding routes, you can register middleware to run with them:
 
 ```js
-app.get(
-  "/admin",
-  (event) => {
-    // Some private API
-  },
-  [auth()],
-);
+app.get("/admin", (event) => {}, [auth]);
 ```
