--- a/docs/2.utils/98.advanced.md
+++ b/docs/2.utils/98.advanced.md
@@ -239,12 +239,29 @@ app.get("/sse", (event) => {
 
 ### `basicAuth(opts)`
 
+Create a basic authentication middleware.
+
+**Example:**
+
+```ts
+import { H3, serve, basicAuth } from "h3";
+const auth = basicAuth({ password: "test" });
+app.get("/", (event) => `Hello ${event.context.basicAuth?.username}!`, [auth]);
+serve(app, { port: 3000 });
+```
+
 ### `requireBasicAuth(event, opts)`
 
-Check for basic authentication in the request.
+Apply basic authentication for current request.
 
-Example:
+**Example:**
 
-```ts import { requireBasicAuth } from "h3"; import { defineEventHandler } from "h3";  export default defineEventHandler(async (event) => {  await requireBasicAuth(event, { username: "test", password: "test" });  return `Hello, ${event.context.basicAuth.username}!`; });
+```ts
+import { defineEventHandler, requireBasicAuth } from "h3";
+export default defineEventHandler(async (event) => {
+ await requireBasicAuth(event, { password: "test" });
+ return `Hello, ${event.context.basicAuth.username}!`;
+});
+```
 
 <!-- /automd -->
