--- a/docs/1.guide/2.app.md
+++ b/docs/1.guide/2.app.md
@@ -47,13 +47,13 @@ const app = new H3({
 
 ## H3 App Methods
 
-### `app.fetch(request, init?, context?)`
+### `app.fetch(request, init?)`
 
 A [fetch](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like API allowing to fetch app routes.
 
 Input can be a URL, relative path or standard [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) object.
 
-Returned value is a standard [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) or a promise resolving to a Response.
+Returned value is a standard [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) promise.
 
 **Example:**
 
@@ -67,10 +67,6 @@ console.log(response, await response.text());
 
 An h3 compatible event handler useful to compose multiple h3 app instances.
 
-### `app.resolve(method, path)`
-
-Resolve a route handler by method and path useful for custom purposes.
-
 ### `app.on(method, route, handler)`
 
 Register route handler for specific HTTP method.
@@ -83,13 +79,41 @@ Register route handler for specific HTTP method (shortcut for `app.on(method, ..
 
 Register route handler for all HTTP methods.
 
-### `app.use(handler, opts?)`
+### `app.use(middleware, opts?)`
 
 Register a global middleware handler.
 
-### `app.use(middleware, opts?)`
+### `app.use(route, middleware, opts?)`
 
-Register a routed global middleware handler with optional custom matching options.
+Register middleware handler that runs on certain routes.
+
+### `app.mount(base, fetchHandler)`
+
+Mount a `.fetch` compatible server instance like [Hono](https://hono.dev/) or [Elysia](https://elysiajs.com/) under the base URL.
+
+**Example:**
+
+```js
+import { H3 } from "h3";
+import { Hono } from "hono";
+import { Elysia } from "elysia";
+
+const app = new H3()
+  .mount(
+    "/elysia",
+    new Elysia().get("/test", () => "Hello Elysia!"),
+  )
+  .mount(
+    "/hono",
+    new Hono().get("/test", (c) => c.text("Hello Hono!")),
+  );
+```
+
+> [!NOTE]
+> base prefix will be removed from `request.url` passed to the mounted app.
+
+> [!TIP]
+> Similarly, you can mount an H3 app in [Hono](https://hono.dev/docs/api/hono#mount) or [Elysia](https://elysiajs.com/patterns/mount#mount-1).
 
 ## H3 App Properties
 
