feat: `event.waitUntil`

--- a/docs/1.guide/4.event.md
+++ b/docs/1.guide/4.event.md
@@ -73,3 +73,25 @@ app.get("/", (event) => {
   return "OK";
 });
 ```
+
+### `event.waitUntil`
+
+Tell the runtime about an ongoing operation that shouldn't close until the promise resolves.
+
+```js
+async function logRequest(request) {
+  await fetch("https://telemetry.example.com", {
+    method: "POST",
+    body: JSON.stringify({
+      method: request.method,
+      url: request.url,
+      ip: request.ip,
+    }),
+  });
+}
+
+app.get("/", (event) => {
+  request.waitUntil(logRequest(request));
+  return "OK";
+});
+```
