--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -23,7 +23,7 @@ Thanks to evolving Web standards and improved runtime support (such as [Deno](ht
 
 ## Srvx: Universal Server API
 
-A big challenge is Node.js lacks native support for Web-standard HTTP servers. We need adapters to bridge `node.http.IncomingMessage` and `Request`, and handling `Response` via `node.http.ServerResponse`. Existing adapters didn't fully meet H3's requirements for modularity, performance, and compatibility.
+A major challenge is that Node.js lacks native support for Web-standard HTTP servers. Adapters are needed to bridge `node.http.IncomingMessage` to `Request`, and to handle `Response` via `node.http.ServerResponse`. Existing adapters did not fully meet H3's requirements for modularity, performance, and compatibility. We have implemented a [compatibility layer](https://srvx.h3.dev/guide/node) that synchronizes interfaces and achieves up to **90%** of `node:http` performance—almost the best possible performances today comparing to alternatives. see [benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)).
 
 Furthermore, each runtime that pioneered adopting Web standards for servers did not agree on specific implementation details. Typically, all new server runtimes accept a [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like handler, using [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) as input and returning a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response). However, since Web standards were not initially designed for server contexts, they lack standardized ways to access request context, IP information, handle WebSocket upgrades, or set server options. Consequently, each runtime created its own extensions. Today, initiatives like [WinterTC](https://wintertc.org/faq) aim to establish cross-runtime interoperability over time.
 
@@ -119,7 +119,16 @@ This method, allowed H3 v2 to be optimized on µs-level latency improvements per
 > [!NOTE]
 > Framework choice barely impacts application performance compared to network latency. These benchmarks primarily guide internal optimizations.
 
-<!-- [TODO: Benchmark results vs v1] -->
+| Measurement            | H3 v1   | H3 v2                |
+| ---------------------- | ------- | -------------------- |
+| Web API latency (node) | 36 µs   | 7 µs (5x faster)     |
+| Web API latency (bun)  | 3.3 µs  | 27.74 µs (8x faster) |
+| Web API latency (deno) | 1.3 ms  | 8 µs (160x faster!)  |
+| App bundle (min)       | 101 kB  | 9,1 kB (91% smaller) |
+| App bundle (min+gzip)  | 39.6 kB | 3.6 kB (90% smaller) |
+
+> [!NOTE]
+> The benchmarks above compare the H3 core with the **Web Standard** target and do not include adapters. The effect on real-world performance may be negligible in larger applications. See the [benchmarks source](https://github.com/h3js/h3/tree/main/test/bench) for details.
 
 ## Migration from Version 1
 
